--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -242,18 +242,18 @@
   "HomeTrackerDiscussion": "https://community.hubitat.com/t/release-home-tracker-track-the-coming-and-going-of-house-members-with-announcements-and-push-messages/22709",
   "HomeTrackerUpdateNote": "V2.0.3 - 09/14/19 - More tweaking...",
   
-  "HubWatchdogParentVersion": "V1.0.0",
+  "HubWatchdogParentVersion": "V1.0.1",
   "HubWatchdogChild1Version": "V1.0.7",
   "HubWatchdogChild1Name": "",
-  "HubWatchdogChild2Version": "",
-  "HubWatchdogChild2Name": "",
+  "HubWatchdogChild2Version": "V1.0.0",
+  "HubWatchdogChild2Name": "Examiner",
   "HubWatchdogChild3Version": "",
   "HubWatchdogChild3Name": "",
   "HubWatchdogChild4Version": "",
   "HubWatchdogChild4Name": "",
   "HubWatchdogParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Hub%20Watchdog/HW-parent.groovy",
   "HubWatchdogChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Hub%20Watchdog/HW-child.groovy",
-  "HubWatchdogChild2RawCode": "",
+  "HubWatchdogChild2RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Hub%20Watchdog/HWE-child.groovy",
   "HubWatchdogChild3RawCode": "",
   "HubWatchdogChild4RawCode": "",
   "HubWatchdogDiscussion": "https://community.hubitat.com/t/release-hub-watchdog-simple-way-to-monitor-if-your-hub-is-slowing-down-or-not/23371",
