--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -225,8 +225,8 @@
   "GentleWakeUpDiscussion": "https://community.hubitat.com/t/port-gentle-wake-up/19971",
   "GentleWakeUpUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
-  "HomeTrackerParentVersion": "v2.0.0",
-  "HomeTrackerChild1Version": "v2.0.4",
+  "HomeTrackerParentVersion": "v2.0.1",
+  "HomeTrackerChild1Version": "v2.0.5",
   "HomeTrackerChild1Name": "",
   "HomeTrackerChild2Version": "",
   "HomeTrackerChild2Name": "",
@@ -240,7 +240,7 @@
   "HomeTrackerChild3RawCode": "",
   "HomeTrackerChild4RawCode": "",
   "HomeTrackerDiscussion": "https://community.hubitat.com/t/release-home-tracker-track-the-coming-and-going-of-house-members-with-announcements-and-push-messages/22709",
-  "HomeTrackerUpdateNote": "V2.0.4 - 10/03/19 - LOTS of changes",
+  "HomeTrackerUpdateNote": "V2.0.5 - 10/04/19 - Support for pronunciation of Presence Sensor names - Changes by @aaron",
   
   "HubWatchdogParentVersion": "V1.0.1",
   "HubWatchdogChild1Version": "V1.0.7",
