--- a/AppWatchDog.json
+++ b/AppWatchDog.json
@@ -48,12 +48,12 @@
   ],
   "drivers": [
     {
-      "name": "MQTT Generic Driver",
-      "version": "1.0.2",
+      "name": "Test Driver",
+      "version": "1.0.0",
       "RAW": "https://community.hubitat.com/t/project-mqtt-generic-driver-and-salt-tank-monitor-using-arduino/16008",
       "child": [],
       "hubitatDiscussion": "",
-      "updateNote": "1.0.2 - added support for AppWatchDogv2"
+      "updateNote": "1.0.0 - Initial Test"
     }
   ]
 }
