--- a/AppWatchDog.json
+++ b/AppWatchDog.json
@@ -14,13 +14,7 @@
           "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-child.groovy"
         }
       ],
-      "driver": [
-        {
-          "name": "",
-          "version": "",
-          "RAW": ""
-        }
-      ],
+      "driver": [],
       "hubitatDiscussion": "https://community.hubitat.com/t/release-abacus-intense-counting/7883",
       "updateNote": "2.0.0 - 08/18/19 - App Watchdog 2 compatible"
     },
@@ -35,13 +29,7 @@
           "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-child.groovy"
         },
       ],
-      "driver": [
-      {
-          "name": "",
-          "version": "",
-          "RAW": ""
-        }
-      ],
+      "driver": [],
       "hubitatDiscussion": "",
       "updateNote": ""
     }
