--- a/AppWatchDog.json
+++ b/AppWatchDog.json
@@ -204,7 +204,7 @@
     },
     {
       "name": "Life360 Tracker",
-      "version": "2.0.0,
+      "version": "2.0.0",
       "RAW": "ttps://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Life360%20Tracker/LT-parent.groovy",
       "child": [
         {
@@ -219,13 +219,13 @@
     },
     {
       "name": "Life360 with States",
-      "version": "2.0.0,
+      "version": "2.0.0",
       "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Life360/L-app.groovy",
       "child": [],
       "driver": [
         {
           "name": "Life360 User",
-          "version": "2.0.0,
+          "version": "2.0.0",
           "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Life360/L-driver.groovy"
         }],
       "hubitatDiscussion": "https://community.hubitat.com/t/release-life360-with-states-track-all-attributes-with-app-and-driver-also-supports-rm4-and-dashboards/18274",
