--- a/AppWatchDog.json
+++ b/AppWatchDog.json
@@ -205,7 +205,7 @@
     {
       "name": "Life360 Tracker",
       "version": "2.0.0",
-      "RAW": "ttps://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Life360%20Tracker/LT-parent.groovy",
+      "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Life360%20Tracker/LT-parent.groovy",
       "child": [
         {
           "name": "Life360 Tracker Child",
@@ -225,7 +225,113 @@
       "driver": [],
       "hubitatDiscussion": "https://community.hubitat.com/t/release-life360-with-states-track-all-attributes-with-app-and-driver-also-supports-rm4-and-dashboards/18274",
       "updateNote": "2.0.0 - 08/18/19 - App Watchdog 2 compatible"
+    },
+    {
+      "name": "Lighting Effects",
+      "version": "2.0.0",
+      "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Lighting%20Effects/LE%20Parent.groovy",
+      "child": [
+        {
+          "name": "Lighting Effects Child",
+          "version": "2.0.0",
+          "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Lighting%20Effects/LE%20Chile.groovy"
+        }
+      ],
+      "driver": [],
+      "hubitatDiscussion": "https://community.hubitat.com/t/release-lighting-effects/4330",
+      "updateNote": "2.0.0- 09/20/19 - History logging adjustments"
+    },
+    {
+      "name": "Magic Cube",
+      "version": "2.0.0",
+      "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Magic%20Cube/MC-parent.groovy",
+      "child": [
+        {
+          "name": "Magic Cube Child",
+          "version": "2.0.1,
+          "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Magic%20Cube/MC-child.groovy"
+        }
+      ],
+      "driver": [],
+      "hubitatDiscussion": "https://community.hubitat.com/t/release-lighting-effects/4330",
+      "updateNote": "2.0.1 - 08/21/19 - (dan.t) added ability to execute rule actions"
+    },
+    {
+      "name": "One at a Time",
+      "version": "2.0.0",
+      "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/One%20at%20a%20Time/OaaT-Parent.groovy",
+      "child": [
+        {
+          "name": "One at a Time Child",
+          "version": "2.0.0,
+          "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/One%20at%20a%20Time/OaaT-Child.groovy"
+        }
+      ],
+      "driver": [],
+      "hubitatDiscussion": "https://community.hubitat.com/t/release-one-at-a-time/7063",
+      "updateNote": "2.0.0 - 08/18/19 - App Watchdog 2 compatible"
+    },
+    {
+      "name": "Send IP2IR",
+      "version": "2.0.0",
+      "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Parent.groovy",
+      "child": [
+        {
+          "name": "Send IP2IR Child",
+          "version": "2.0.0,
+          "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Child.groovy"
+        }
+      ],
+      "driver": [],
+      "hubitatDiscussion": "https://community.hubitat.com/t/release-send-ip2ir-control-all-of-your-ir-devices-from-your-dashboard/4667",
+      "updateNote": "2.0.0 - 08/18/19 - App Watchdog 2 compatible"
+    },
+    {
+      "name": "Simple Dates",
+      "version": "2.0.0",
+      "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Dates/SD-parent.groovy",
+      "child": [
+        {
+          "name": "Simple Dates Child",
+          "version": "2.0.0,
+          "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Dates/SD-child.groovy"
+        }
+      ],
+      "driver": [],
+      "hubitatDiscussion": "https://community.hubitat.com/t/release-simple-dates-create-countdowns-of-your-special-dates/21859",
+      "updateNote": "2.0.0 - 08/18/19 - App Watchdog 2 compatible"
+    },
+    {
+      "name": "Simple Device",
+      "version": "2.0.0",
+      "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Device%20Timer/SDT-parent.groovy",
+      "child": [
+        {
+          "name": "Simple Device Child",
+          "version": "2.0.0,
+          "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Device%20Timer/SDT-child.groovy"
+        }
+      ],
+      "driver": [],
+      "hubitatDiscussion": "https://community.hubitat.com/t/release-simple-device-timer/16917",
+      "updateNote": "2.0.0 - 08/18/19 - App Watchdog 2 compatible"
+    },
+    {
+      "name": "Simple Irrigation",
+      "version": "2.0.0",
+      "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Irrigation/SI-parent.groovy",
+      "child": [
+        {
+          "name": "Simple Irrigation Child",
+          "version": "2.0.0,
+          "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Irrigation/SI-child.groovy"
+        }
+      ],
+      "driver": [],
+      "hubitatDiscussion": "https://community.hubitat.com/t/release-simple-irrigation/14420",
+      "updateNote": "2.0.0 - 08/18/19 - App Watchdog 2 compatible"
     }
+    
     
     
   ],
