--- a/AppWatchDog.json
+++ b/AppWatchDog.json
@@ -248,7 +248,7 @@
       "child": [
         {
           "name": "Magic Cube Child",
-          "version": "2.0.1,
+          "version": "2.0.1",
           "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Magic%20Cube/MC-child.groovy"
         }
       ],
@@ -263,7 +263,7 @@
       "child": [
         {
           "name": "One at a Time Child",
-          "version": "2.0.0,
+          "version": "2.0.0",
           "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/One%20at%20a%20Time/OaaT-Child.groovy"
         }
       ],
@@ -278,7 +278,7 @@
       "child": [
         {
           "name": "Send IP2IR Child",
-          "version": "2.0.0,
+          "version": "2.0.0",
           "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Child.groovy"
         }
       ],
@@ -293,7 +293,7 @@
       "child": [
         {
           "name": "Simple Dates Child",
-          "version": "2.0.0,
+          "version": "2.0.0",
           "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Dates/SD-child.groovy"
         }
       ],
@@ -308,7 +308,7 @@
       "child": [
         {
           "name": "Simple Device Child",
-          "version": "2.0.0,
+          "version": "2.0.0",
           "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Device%20Timer/SDT-child.groovy"
         }
       ],
@@ -323,7 +323,7 @@
       "child": [
         {
           "name": "Simple Irrigation Child",
-          "version": "2.0.0,
+          "version": "2.0.0",
           "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Irrigation/SI-child.groovy"
         }
       ],
