--- a/AppWatchDog.json
+++ b/AppWatchDog.json
@@ -18,7 +18,7 @@
         {
           "name": "Abacus - Counting Tile",
           "version": "1.0.3",
-          "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-driver.groovy""
+          "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-driver.groovy"
         }
       ],
       "hubitatDiscussion": "https://community.hubitat.com/t/release-abacus-intense-counting/7883",
