--- a/AppWatchDog.json
+++ b/AppWatchDog.json
@@ -246,7 +246,18 @@
       "version": "2.0.0",
       "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Life360/L-app.groovy",
       "child": [],
-      "driver": [],
+      "driver": [
+        {
+          "name": "Life360 Container",
+          "version": "2.0.2",
+          "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Life360/L-container-driver.groovy"
+        },
+        {
+          "name": "Life360 User",
+          "version": "1.1.6",
+          "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Life360/L-driver.groovy"
+        }
+      ],
       "hubitatDiscussion": "https://community.hubitat.com/t/release-life360-with-states-track-all-attributes-with-app-and-driver-also-supports-rm4-and-dashboards/18274",
       "updateNote": "2.0.0 - 08/18/19 - App Watchdog 2 compatible"
     },
@@ -264,6 +275,27 @@
       "driver": [],
       "hubitatDiscussion": "https://community.hubitat.com/t/release-lighting-effects/4330",
       "updateNote": "2.0.0- 09/20/19 - History logging adjustments"
+    },
+    {
+      "name": "Log Watchdog",
+      "version": "2.0.0",
+      "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Log%20Watchdog/LW-parent.groovy",
+      "child": [
+        {
+          "name": "Log Watchdog Child",
+          "version": "2.0.5",
+          "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Log%20Watchdog/LW-child.groovy"
+        }
+      ],
+      "driver": [
+        {
+          "name": "Log Watchdog Driver",
+          "version": "2.0.7",
+          "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Log%20Watchdog/LW-driver.groovy"
+        }
+      ],
+      "hubitatDiscussion": "https://community.hubitat.com/t/release-lighting-effects/4330",
+      "updateNote": "2.0.5 - 10/08/19 - Reduce child apps to just one keyset to prevent run away conditions"
     },
     {
       "name": "Magic Cube",
@@ -306,7 +338,13 @@
           "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Child.groovy"
         }
       ],
-      "driver": [],
+      "driver": [
+        {
+          "name": "IP2IR Telnet",
+          "version": "1.0.4",
+          "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Driver.groovy"
+        }
+      ],
       "hubitatDiscussion": "https://community.hubitat.com/t/release-send-ip2ir-control-all-of-your-ir-devices-from-your-dashboard/4667",
       "updateNote": "2.0.0 - 08/18/19 - App Watchdog 2 compatible"
     },
@@ -409,6 +447,14 @@
       "child": [],
       "hubitatDiscussion": "https://community.hubitat.com/t/release-pollen-forecaster-and-asthma-forecaster/13636",
       "updateNote": "2.0.3 - 08/29/2019 - App Watchdog compatible"
+    },
+    {
+      "name": "Pollen Forecaster",
+      "version": "2.0.5,
+      "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Drivers/Pollen%20Forecaster/PF-driver.groovy",
+      "child": [],
+      "hubitatDiscussion": "https://community.hubitat.com/t/release-pollen-forecaster-and-asthma-forecaster/13636",
+      "updateNote": "2.0.5 - 08/29/2019 - App Watchdog compatible"
     }
   ]
 }
