--- a/AppWatchDog.json
+++ b/AppWatchDog.json
@@ -177,7 +177,7 @@
       "child": [
         {
           "name": "Home Tracker Child",
-          "version": "2.0.5",
+          "version": "2.0.6",
           "RAW": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Home%20Tracker/HT-child.groovy"
         }
       ],
@@ -189,7 +189,7 @@
         }
       ],
       "hubitatDiscussion": "https://community.hubitat.com/t/release-home-tracker-track-the-coming-and-going-of-house-members-with-announcements-and-push-messages/22709",
-      "updateNote": "2.0.5 - 10/04/19 - Support for pronunciation of Presence Sensor names - Changes by @aaron"
+      "updateNote": "2.0.6 - 10/13/19 - Cosmetic changes to Global Variable section and new error message if not used. New option 'auto clear' for message queueing issues."
     },
     {
       "name": "Hub Watchdog",
