--- a/AppWatchDog.json
+++ b/AppWatchDog.json
@@ -189,7 +189,7 @@
         }
       ],
       "hubitatDiscussion": "https://community.hubitat.com/t/release-home-tracker-track-the-coming-and-going-of-house-members-with-announcements-and-push-messages/22709",
-      "updateNote": "2.0.6 - 10/13/19 - Cosmetic changes to Global Variable section and new error message if not used. New option 'auto clear' for message queueing issues."
+      "updateNote": "2.0.6 - 10/13/19 - Cosmetic changes to Global Variable section and new error message if not used. New option 'auto clear' for message queuing issues."
     },
     {
       "name": "Hub Watchdog",
