--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -2,7 +2,7 @@
   "GitHubAuthor": "BPTWorld",
   "GitHubMainURL": "https://github.com/bptworld/Hubitat",
   "PaypalLink": "https://paypal.me/bptworld",
-  "Apps": "Abacus Intense Counting, Abacus Time Traveler, App Watchdog 2, At Home Simulator, BI Control, CATT Director, Chromecast Helper, Departures, Device Sequencer, Device Watchdog, Follow Me, Fully Kiosk Director, Gentle Wake Up, Home Tracker, Hub Watchdog, Life360 Tracker, Life360 with States, Lighting Effects, Magic Cube, Motion Controlled Scene Lighting, Notifier Plus, One at a Time, Send IP2IR, Simple Dates, Simple Device Timer, Simple Irrigation, Tile Master, Snapshot, Web Pinger, Welcome Home",
+  "Apps": "Abacus Intense Counting, Abacus Time Traveler, App Watchdog 2, At Home Simulator, BI Control, CATT Director, Chromecast Helper, Device Check Plus, Device Sequencer, Device Watchdog, Follow Me, Fully Kiosk Director, Gentle Wake Up, Home Tracker, Hub Watchdog, Life360 Tracker, Life360 with States, Lighting Effects, Magic Cube, Motion Controlled Scene Lighting, Notifier Plus, One at a Time, Send IP2IR, Simple Dates, Simple Device Timer, Simple Irrigation, Tile Master, Snapshot, Web Pinger",
   
   "AbacusIntenseCountingParentVersion": "v2.0.0",
   "AbacusIntenseCountingChild1Version": "v2.0.0",
@@ -123,22 +123,22 @@
   "ChromecastHelperDiscussion": "https://community.hubitat.com/t/release-chromecast-helper-simple-way-to-help-keep-your-google-nest-devices-alive/19237",
   "ChromecastHelperUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
-  "DeparturesParentVersion": "v2.0.0",
-  "DeparturesChild1Version": "v2.0.1",
-  "DeparturesChild1Name": "Departures",
-  "DeparturesChild2Version": "v2.0.2",
-  "DeparturesChild2Name": "Arrivals",
-  "DeparturesChild3Version": "",
-  "DeparturesChild3Name": "",
-  "DeparturesChild4Version": "",
-  "DeparturesChild4Name": "",
-  "DeparturesParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Departures/D-parent.groovy",
-  "DeparturesChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Departures/D-child.groovy",
-  "DeparturesChild2RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Departures/A-child.groovy",
-  "DeparturesChild3RawCode": "",
-  "DeparturesChild4RawCode": "",
-  "DeparturesDiscussion": "https://community.hubitat.com/t/release-departures/12039",
-  "DeparturesUpdateNote": "V2.0.2 - 08/26/19 - Now messages have an 'opening' and a 'closing' segment. Code additions from @Matthew, Thank you.",
+  "DeviceCheckPlusParentVersion": "v1.0.0",
+  "DeviceCheckPlusChild1Version": "v1.0.0",
+  "DeviceCheckPlusChild1Name": "",
+  "DeviceCheckPlusChild2Version": "",
+  "DeviceCheckPlusChild2Name": "",
+  "DeviceCheckPlusChild3Version": "",
+  "DeviceCheckPlusChild3Name": "",
+  "DeviceCheckPlusChild4Version": "",
+  "DeviceCheckPlusChild4Name": "",
+  "DeviceCheckPlusParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Check%20Plus/DCP-parent.groovy",
+  "DeviceCheckPlusChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Check%20Plus/DCP-child.groovy",
+  "DeviceCheckPlusChild2RawCode": "",
+  "DeviceCheckPlusChild3RawCode": "",
+  "DeviceCheckPlusChild4RawCode": "",
+  "DeviceCheckPlusDiscussion": "",
+  "DeviceCheckPlusUpdateNote": "V1.0.0 - 10/13/19 - Initial release",
   
   "DeviceSequencerParentVersion": "v2.0.0",
   "DeviceSequencerChild1Version": "v2.0.0",
@@ -497,20 +497,4 @@
   "WebPingerDiscussion": "https://community.hubitat.com/t/release-web-pinger/8347",
   "WebPingerUpdateNote": "V2.0.1 - 09/06/19 - Add new section to 'Turn Switch(es) OFF if URL is not available, ON if everything is good'",
   
-  "WelcomeHomeParentVersion": "v2.0.4",
-  "WelcomeHomeChild1Version": "v2.1.3",
-  "WelcomeHomeChild1Name": "",
-  "WelcomeHomeChild2Version": "",
-  "WelcomeHomeChild2Name": "",
-  "WelcomeHomeChild3Version": "",
-  "WelcomeHomeChild3Name": "",
-  "WelcomeHomeChild4Version": "",
-  "WelcomeHomeChild4Name": "",
-  "WelcomeHomeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Welcome%20Home/WH%20Parent.groovy",
-  "WelcomeHomeChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Welcome%20Home/WH%20Child.groovy",
-  "WelcomeHomeChild2RawCode": "",
-  "WelcomeHomeChild3RawCode": "",
-  "WelcomeHomeChild4RawCode": "",
-  "WelcomeHomeDiscussion": "https://community.hubitat.com/t/release-welcome-home/6445",
-  "WelcomeHomeUpdateNote": "V2.1.3 - 09/11/19 - Found a section I forgot to update!",
 }
