--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -478,7 +478,7 @@
   "TileMasterChild3RawCode": "",
   "TileMasterChild4RawCode": "",
   "TileMasterDiscussion": "https://community.hubitat.com/t/release-tile-master-create-a-tile-with-multiple-devices-and-customization-options/23140",
-  "TileMasterUpdateNote": "V2.1.1 - 11/01/19 - Updated Table build logic to minimize formating (jerry.molenaar)",
+  "TileMasterUpdateNote": "V2.1.1 - 11/01/19 - Updated Table build logic to minimize formatting (jerry.molenaar)",
   
   "WebPingerParentVersion": "v2.0.0",
   "WebPingerChild1Version": "v2.0.1",
