--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -396,7 +396,7 @@
   "SendIP2IRUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "SimpleDatesParentVersion": "v2.0.0",
-  "SimpleDatesChild1Version": "v2.0.0",
+  "SimpleDatesChild1Version": "v2.0.1",
   "SimpleDatesChild1Name": "",
   "SimpleDatesChild2Version": "",
   "SimpleDatesChild2Name": "",
@@ -410,7 +410,7 @@
   "SimpleDatesChild3RawCode": "",
   "SimpleDatesChild4RawCode": "",
   "SimpleDatesDiscussion": "https://community.hubitat.com/t/release-simple-dates-create-countdowns-of-your-special-dates/21859",
-  "SimpleDatesrUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
+  "SimpleDatesrUpdateNote": "V2.0.1 - 11/16/19 - Date output now available in two formats - MM/DD/YYYY or DD/MM/YYY",
   
   "SimpleDeviceTimerParentVersion": "v2.0.0",
   "SimpleDeviceTimerChild1Version": "v2.0.0",
