--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -378,6 +378,23 @@
   "OneataTimeDiscussion": "https://community.hubitat.com/t/release-one-at-a-time/7063",
   "OneataTimeUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
+  "RoomDirectorParentVersion": "v1.0.0",
+  "RoomDirectorChild1Version": "v1.0.0",
+  "RoomDirectorChild1Name": "",
+  "RoomDirectorChild2Version": "",
+  "RoomDirectorChild2Name": "",
+  "RoomDirectorChild3Version": "",
+  "RoomDirectorChild3Name": "",
+  "RoomDirectorChild4Version": "",
+  "RoomDirectorChild4Name": "",
+  "RoomDirectorParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Room%20Director/RD-parent.groovy",
+  "RoomDirectorChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Room%20Director/RD-child.groovy",
+  "RoomDirectorChild2RawCode": "",
+  "RoomDirectorChild3RawCode": "",
+  "RoomDirectorChild4RawCode": "",
+  "RoomDirectorDiscussion": "",
+  "RoomDirectorUpdateNote": "V1.0.0 - 11/17/19 - Initial Release",
+  
   "SendIP2IRParentVersion": "v2.0.0",
   "SendIP2IRChild1Version": "v2.0.0",
   "SendIP2IRChild1Name": "",
